# reproducer

./: .gitignore  readme.md
openSSL/: readme.md
openSSL/client/: CMakeLists.txt
openSSL/client/scripts/: build_OpenSSL.sh
openSSL/client/src/: main.c
openSSL/service/: go.mod  main.go
openSSL/service/listener/: listener.go
openSSL/service/quic/: config.go  main_loop.go  manager.go  tls.go  x509crt  x509key
